; ModuleID = '/home/carl/AnghaBench/esp-idf/components/pthread/extr_pthread_local_storage.c_pthread_setspecific.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/pthread/extr_pthread_local_storage.c_pthread_setspecific.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i8*, i32 }

@ENOENT = common dso_local global i32 0, align 4
@PTHREAD_TLS_INDEX = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@pthread_local_storage_thread_deleted_callback = common dso_local global i32 0, align 4
@value_entry_t_ = common dso_local global i32 0, align 4
@next = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pthread_setspecific(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_7__*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32* @find_key(i32 %9)
  store i32* %10, i32** %6, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* @ENOENT, align 4
  store i32 %14, i32* %3, align 4
  br label %75

15:                                               ; preds = %2
  %16 = load i32, i32* @PTHREAD_TLS_INDEX, align 4
  %17 = call i32* @pvTaskGetThreadLocalStoragePointer(i32* null, i32 %16)
  store i32* %17, i32** %7, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %31

20:                                               ; preds = %15
  %21 = call i32* @calloc(i32 1, i32 4)
  store i32* %21, i32** %7, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %26

24:                                               ; preds = %20
  %25 = load i32, i32* @ENOMEM, align 4
  store i32 %25, i32* %3, align 4
  br label %75

26:                                               ; preds = %20
  %27 = load i32, i32* @PTHREAD_TLS_INDEX, align 4
  %28 = load i32*, i32** %7, align 8
  %29 = load i32, i32* @pthread_local_storage_thread_deleted_callback, align 4
  %30 = call i32 @vTaskSetThreadLocalStoragePointerAndDelCallback(i32* null, i32 %27, i32* %28, i32 %29)
  br label %31

31:                                               ; preds = %26, %15
  %32 = load i32*, i32** %7, align 8
  %33 = load i32, i32* %4, align 4
  %34 = call %struct.TYPE_7__* @find_value(i32* %32, i32 %33)
  store %struct.TYPE_7__* %34, %struct.TYPE_7__** %8, align 8
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %36 = icmp ne %struct.TYPE_7__* %35, null
  br i1 %36, label %37, label %53

37:                                               ; preds = %31
  %38 = load i8*, i8** %5, align 8
  %39 = icmp ne i8* %38, null
  br i1 %39, label %40, label %44

40:                                               ; preds = %37
  %41 = load i8*, i8** %5, align 8
  %42 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %43 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %42, i32 0, i32 0
  store i8* %41, i8** %43, align 8
  br label %52

44:                                               ; preds = %37
  %45 = load i32*, i32** %7, align 8
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %47 = load i32, i32* @value_entry_t_, align 4
  %48 = load i32, i32* @next, align 4
  %49 = call i32 @SLIST_REMOVE(i32* %45, %struct.TYPE_7__* %46, i32 %47, i32 %48)
  %50 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %51 = call i32 @free(%struct.TYPE_7__* %50)
  br label %52

52:                                               ; preds = %44, %40
  br label %74

53:                                               ; preds = %31
  %54 = load i8*, i8** %5, align 8
  %55 = icmp ne i8* %54, null
  br i1 %55, label %56, label %73

56:                                               ; preds = %53
  %57 = call %struct.TYPE_7__* @malloc(i32 16)
  store %struct.TYPE_7__* %57, %struct.TYPE_7__** %8, align 8
  %58 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %59 = icmp eq %struct.TYPE_7__* %58, null
  br i1 %59, label %60, label %62

60:                                               ; preds = %56
  %61 = load i32, i32* @ENOMEM, align 4
  store i32 %61, i32* %3, align 4
  br label %75

62:                                               ; preds = %56
  %63 = load i32, i32* %4, align 4
  %64 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %65 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %64, i32 0, i32 1
  store i32 %63, i32* %65, align 8
  %66 = load i8*, i8** %5, align 8
  %67 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %68 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %67, i32 0, i32 0
  store i8* %66, i8** %68, align 8
  %69 = load i32*, i32** %7, align 8
  %70 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %71 = load i32, i32* @next, align 4
  %72 = call i32 @SLIST_INSERT_HEAD(i32* %69, %struct.TYPE_7__* %70, i32 %71)
  br label %73

73:                                               ; preds = %62, %53
  br label %74

74:                                               ; preds = %73, %52
  store i32 0, i32* %3, align 4
  br label %75

75:                                               ; preds = %74, %60, %24, %13
  %76 = load i32, i32* %3, align 4
  ret i32 %76
}

declare dso_local i32* @find_key(i32) #1

declare dso_local i32* @pvTaskGetThreadLocalStoragePointer(i32*, i32) #1

declare dso_local i32* @calloc(i32, i32) #1

declare dso_local i32 @vTaskSetThreadLocalStoragePointerAndDelCallback(i32*, i32, i32*, i32) #1

declare dso_local %struct.TYPE_7__* @find_value(i32*, i32) #1

declare dso_local i32 @SLIST_REMOVE(i32*, %struct.TYPE_7__*, i32, i32) #1

declare dso_local i32 @free(%struct.TYPE_7__*) #1

declare dso_local %struct.TYPE_7__* @malloc(i32) #1

declare dso_local i32 @SLIST_INSERT_HEAD(i32*, %struct.TYPE_7__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
